<resources>
    <string name="app_name">StudentCounsellingService</string>
    <string name="title_activity_studiengaenge">studiengaengeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="zurueckUebersicht" color="#007bbc">&lt; Zurück zur Übersicht</string>
    <string name="schritteHeadline">Schritt für Schritt zum Studium</string>
    <string name="infoStudiengang">Infos zum Studiengang</string>
    <string name="buttonAuswahl">&lt; Zurück zur Auswahl</string>
    <string name="Test_Titel">Finde heraus, was dir liegt!</string>
    <string name="Test_Text">\nHast Du schon einmal wirklich darüber nachgedacht \n\n • was Du beruflich machen willst? \n • was Dich wirklich interessiert? \n • für was Du „brennst“? \n • welches Studienfach für Dich das richtige sein könnte? \n\nDiese Fragen kannst nur Du Dir ehrlich beantworten – keine Freunde, keine Lehrer, keine Eltern.\n\n<b>Wir haben einen Test vorbereitet, der Dir dabei hilft, Dir über deine Interessen besser klar zu werden, der Dir Impulse und Anregungen gibt, bei dem Du – nachdem Du ihn gemacht hast – vielleicht ganz neue Seiten an Dir entdeckst. Nimm Dir ein bisschen Zeit – und lass Dich von Dir überraschen!</b></string>
    <string name="Test_Button">Hier geht es zum Test</string>
    <string name="profil">PROFIL DES STUDIENGANGS</string>
    <string name="passt">PASST DAS ZU MIR?</string>
    <string name="nachdemstudium">UND NACH DEM STUDIUM?</string>
    <string name="mehrinfos">MEHR INFOS</string>
    <string name="profilArchitektur">Dieser Studiengang bietet Dir Einblicke in alle wichtigen Aspekte von Architektur und Städtebau. Deine praxisorientierte Ausbildung umfasst die vielfältigen Betätigungsfelder des Planens und Bauens. Du erwirbst Kenntnisse über Materialien, Techniken, Räume und Gebäude.\n\nIn anspruchsvollen Projekten lernst Du kreativ zu gestalten, detailliert zu entwerfen und genau zu konstruieren.</string>
    <string name="passtArchitektur">Du solltest Dich für Technik und Materialien interessieren, ein gutes räumliches Vorstellungsvermögen und gestalterisches Geschick besitzen, gut in Mathematik sein und gerne organisieren und im Team arbeiten.
    \n\nEigenverantwortliches Handeln, geistige Beweglichkeit und die Bereitschaft und Fähigkeit zu gemeinsamer Lösungsentwicklung werden gefördert. Die anwendungsbezogene Ausbildung vermittelt ein hohes Maß an Allgemein- und Spezialwissen sowie Kommunikations- und Teamfähigkeit.</string>
    <string name="nachdemstudiumArchitektur">Du kannst Dich an einer Vielfalt von Planungen beteiligen: von der Planung des Entwurfs und der Baugenehmigung bis zur Ausführungsplanung, von der Planung von Innenräumen bis zur Städteplanung. Außerdem kannst Du das Management eines Bauprojekts übernehmen oder Baustellen koordinieren.
    \n\nMit dem Studienabschluss bist Du für Architektur- und Planungsbüros qualifiziert zur Mitarbeit in allen Leistungsphasen der Honorarordnung für Architekten und Ingenieure. Ergänzend zu den klassischen Arbeitsfeldern bieten sich Berufsmöglichkeiten in der Immobilienwirtschaft, Gebäudeverwaltung und in öffentlichen Einrichtungen.</string>
    <string name="mehrinfosArchitektur">Zahlreiche praktische Übungen finden in Laboren und Werkstätten des Fachbereichs statt.\n\n<a href="https://www.frankfurt-university.de/fachbereiche/fb-1-architektur-bauingenieurwesen-geomatik/bachelor-studiengaenge/architektur-b-a.html">Weitere Informationen</a></string>
    <string name="beratungHeadline">Orientierung und Beratung</string>
    <string name="ofirstText"><![CDATA[<p>Der “Klassiker“: Im persönlichen Gespräch berät das Team der Studienberatung über Studienmöglichkeiten,
    Inhalte, Aufbau und Anforderungen eines Studiums. Hier bekommst Du Hinweise  zur Entscheidungsfindung für den richtigen Studiengang,
    zu Studieninhalten, zu Berufsperspektiven. Und man freut sich, wenn Du mit konkreten Fragen deutlich machst, dass Du Dich vorab informiert hast!
    Dann kann man gleich tiefer einsteigen. <br/>
    <a href="https://www.frankfurt-university.de/studium/beratung/dasteam1/unsere-angebote1.html">Mehr Infos</a></p>]]></string>
    <string name="osecondText">\t2. Allgemeine Studienberatung</string>
    <string name="othirdText">\t3. Orientierungsangebote</string>
    <string name="ofourthText"><![CDATA[<p><big><b>„School’s over –and now?“</b></big><br/>
    Workshops für Studieninteressierte und Studierende.<br/>
    <a href="https://www.frankfurt-university.de/studium/beratung/dasteam1/unsere-angebote00/aktuelle-workshops.html">Mehr Infos</a><br/>

    Die hier aufgeführten Angebote richten sich in erster Linie an Studierende;
    den Workshop "School's over - and now?" findest Du in der Workshop-Übersicht unter "Studienvorbereitungs- und -eingangsphase".<br/><br/>

    <big><b>"MainStudy" - Infotage für Schülerinnen, Schüler und Studieninteressierte</b></big><br/>
    Immer im Januar gestaltet die Frankfurt University of Applied Sciences gemeinsam mit allen Frankfurter Hochschulen und der Bundesagentur für Arbeit
    die "MainStudy" auf unserem Campus und dem der Goethe-Uni.<br/>

    Unter anderem stellen Professoren verschiedene Studiengänge vor, Sie können sich an Informationsständen Ihre persönlichen Fragen beantworten lassen,
    an Labor- und Campusführungen teilnehmen und vieles mehr.<br/>

    Willkommen sind sowohl Schülerinnen und Schüler, Lehrerinnen und Lehrer als auch Eltern.<br/>

    Eine Anmeldung ist nicht erforderlich. Nähere Informationen wie auch das Programm finden Sie hier: <a href="https://www.frankfurt-university.de/studium/studium-kennenlernen/mainstudy.html">MainStudy</a> </p>]]></string>
    <string name="oseventhText">\t4. Studieren probieren</string>
    <string name="oeightText"><![CDATA[<p><big><b>Schnupperstudium</b></big><br/>

    Du nimmst an regulären Veranstaltungen wie Vorlesungen oder Seminaren teil.
    Stell Dir eine Liste der für Dich interessanten Veranstaltungen aus dem Vorlesungsverzeichnis zusammen!
    Verschaff Dir konkrete Einblicke in Seminare und Vorlesungen und durch aktive Teilnahme an Laborversuchen.
    Informationen zur Anmeldung findest Du <a href="https://www.frankfurt-university.de/studium/studium-kennenlernen/schnupperangebote10.html">hier</a> auf dieser Seite,
    sobald eine Anmeldung wieder möglich ist.<br/><br/>

    <big><b>Chancen bilden: Fit für\'s Studium</b></big><br/>
    Möglicherweise wärst Du der/die Erste aus Deiner Familie, der/die studiert – kein Wunder,
    dass Du da Fragen und vielleicht sogar Zweifel hast. Wenn Du Schüler/-in einer unserer Partnerschulen bist,
    dann bewirb Dich für einen Platz in unserem Programm „Fit fürs Studium“ (Zahl der Plätze begrenzt) und lass Dich gezielt auf dem Weg ins Studium begleiten und unterstützen.<br/>
    <a href="https://www.frankfurt-university.de/studium/studium-kennenlernen/chancen-bilden00.html">Mehr Infos</a><br/><br/>

    <big><b>Hilfe Mathe!</b></big><br/>
    Mathematik ist ein Grundlagenfach aller Informatik- und Ingenieurstudiengänge, ebenso in den Wirtschaftswissenschaften.
    Wir haben wichtige Tipps auf unserer <a href="https://www.frankfurt-university.de/fachbereiche/fb2/einrichtungen/mathe-plattform.html">Mathe-Plattform</a> zusammengestellt.</p>]]></string>
    <string name="oninethText">\t5. Dem Ingeniör ist nichts zu schwör</string>
    <string name="otenthText"><![CDATA[<p><big><b>Girl‘s Day - only for Girls</b></big><br/>

    Entdecke das spannende Universum der Labore und den Spaß daran, Dinge in Bewegung zu bringen! Wenn Du wissen willst, wie Dinge funktionieren, bist Du an diesem Tag hier richtig!<br/>
    Du kannst bei uns die Roboterdame „Roberta“ zum Tanzen bringen, Bakterien bei der Arbeit erleben, ein 3-D Stadtmodell erarbeiten, den Marienkäfer Kara programmieren,
    eine Smartphone-Schnitzeljagd über den Campus erleben, Dein eigenes Produkt entwickeln, Spannendes über Programmierung und Zahlen erfahren,
    durch Thermographie Unsichtbares sichtbar machen, den Weg von der Hardware zur Software kennenlernen und Dich mit dem Berufsfeld von Ingenieurinnen auseinandersetzen.
    Einfach mal machen!<br/>
    Immer im Frühjahr ist es so weit. Informationen zur Anmeldung findest Du <a href="https://www.frankfurt-university.de/studium/studium-kennenlernen/girls-day-2016.html">hier</a>.<br/><br/>

    <big><b>Technikakademie</b></big><br/>
    Im Unterschied zum Girls’s Day dauert die Technik-Akademie eine Woche und es können daran auch Jungs teilnehmen – warum sollten die sich nicht für
    Technik interessieren? Die nächste Technik-Akademie findet immer im Frühjahr statt.<br/>
    <a href="https://www.frankfurt-university.de/studium/studium-kennenlernen/technik-akademie.html">Mehr Infos</a><br/><br/>

    <big><b>Junior Mentoring</b></big><br/>
    Demnächst wieder hier!<br/>
    Infos folgen </p>]]></string>
    <string name="oeleventhText">\t6. Vor Ort - bei Ihnen oder bei uns!</string>
    <string name="otwelvethText"><![CDATA[<p><big><b>Angebote für Lehrernde und Mitarbeiter/-innen an Schulen</b></big><br/>

    Sehr gerne kommen wir zu Ihnen ins Haus: Sie Planen eine Unterrichtseinheit zum Thema „Studienwahl“?
    Oder veranstalten Sie in Ihrer Schule einen Berufs- bzw. Studieninformations tag? Wir sprechen gerne Ihren speziellen Informationsbedarf
    ab und besuchen Sie „vor Ort“. Oder Sie wollen die Frankfurt University of Applied Sciences mit Ihren Schülerinnen  und Schülern besuchen?<br/>

    Ich freue mich auf Ihre Nachricht und Terminabsprache: Frank Weyel (Studienberater), Tel.: (069) 1533- 3883; <a href="mailto:weyel@abt-sb.fra-uas.de">weyel@abt-sb.fra-uas.de</a><br/>
    <a href="https://www.frankfurt-university.de/studium/studium-kennenlernen/infoveranstaltungen-fuer-schulen.html">Mehr Infos</a> </p>]]></string>
    <string name="otwentyfirstText">\t1. Informieren und probieren geht\n\t\t\t\tüber studieren</string>
    <string name="otwentysecondText"><![CDATA[<p>Nein, wir wollen Dich nicht vom Studium abhalten – im Gegenteil.
    Wir möchten Dich nur ermuntern, vor einer Entscheidung für oder gegen eine Studienrichtung oder für oder
    gegen ein Studium eines oder mehrere unserer vielfältigen Informations- und Orientierungsangebote zu nutzen.<br/>

    Das reicht von persönlicher Studien-Beratung über ein Schnupper-Studium bis zu „in house“-Veranstaltungen „vor Ort“ in der Schule </p>]]></string>
</resources>