<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="false" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="fra.studentcounsellingservice.schritteActivity"
        android:background="@drawable/background">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zurueckUebersicht"
            android:id="@+id/backButton"
            android:background="#00ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/beratungHeadline"
            android:id="@+id/headlineOrientierung"
            android:textColor="#007bbc"
            android:textStyle="bold"
            android:layout_below="@+id/backButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="25sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/otwentyfirstText"
            android:id="@+id/button12"
            android:clickable="true"
            android:layout_below="@+id/headlineOrientierung"
            android:layout_alignParentLeft="true"
            android:background="@drawable/cornerbutton"
            android:gravity="center_vertical"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/otwentysecondText"
            android:id="@+id/textView13"
            android:layout_below="@+id/button12"
            android:background="#ffffff"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/osecondText"
            android:background="@drawable/cornerbutton"
            android:gravity="center_vertical"
            android:id="@+id/button2"
            android:textColor="#ffffff"
            android:layout_below="@+id/textView13"
            android:layout_marginTop="1dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ofirstText"
            android:id="@+id/textView"
            android:layout_below="@+id/button2"
            android:background="#ffffff"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/othirdText"
            android:id="@+id/button3"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/cornerbutton"
            android:gravity="center_vertical"
            android:textColor="#ffffff"
            android:layout_marginTop="1dp"
            android:layout_below="@+id/textView"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ofourthText"
            android:id="@+id/textView4"
            android:layout_below="@+id/button3"
            android:background="#ffffff"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/oseventhText"
            android:id="@+id/button4"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/cornerbutton"
            android:gravity="center_vertical"
            android:textColor="#ffffff"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="1dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/oeightText"
            android:id="@+id/textView5"
            android:layout_below="@+id/button4"
            android:background="#ffffff"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/oninethText"
            android:id="@+id/button5"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/cornerbutton"
            android:gravity="center_vertical"
            android:textColor="#ffffff"
            android:layout_marginTop="1dp"
            android:layout_below="@+id/textView5"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/otenthText"
            android:id="@+id/textView6"
            android:layout_below="@+id/button5"
            android:background="#ffffff"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/oeleventhText"
            android:id="@+id/button6"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/cornerbutton"
            android:gravity="center_vertical"
            android:textColor="#ffffff"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="1dp"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/otwelvethText"
            android:id="@+id/textView7"
            android:layout_below="@+id/button6"
            android:background="#ffffff"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

    </RelativeLayout>
</ScrollView>